# my-rust-incubator

./: README.md
1_concepts/1_1_default_clone_copy/: README.md
1_concepts/1_2_box_pin/: Cargo.toml
1_concepts/1_2_box_pin/src/: lib.rs  task.rs
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/src/: main.rs
1_concepts/1_6_dispatch/src/: main.rs
1_concepts/1_7_sized/src/: main.rs
1_concepts/1_8_thread_safety/src/: main.rs
1_concepts/1_9_phantom/src/: main.rs
1_concepts/src/: doubly_linked_list.rs  lib.rs  main.rs
1_concepts/src/doubly_linked_list/: dll.rs  doubly_linked_node.rs
2_idioms/2_1_type_safety/src/: main.rs
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_4_generic_in_type_out/src/: main.rs
2_idioms/2_5_exhaustivity/src/: lib.rs
2_idioms/2_6_sealing/src/: lib.rs  my_error.rs  my_iterator_ext.rs
2_idioms/src/: main.rs
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/tests/: example.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/src/: lib.rs  main.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml
3_ecosystem/3_9_cmd_env_conf/src/: cli.rs  main.rs  settings.rs
4_backend/: .env  Cargo.toml  README.md
4_backend/4_1_db/: .env  Cargo.toml  README.md
4_backend/4_1_db/migrations/2023-11-26-021951_general/: down.sql  up.sql
4_backend/4_1_db/src/: cli.rs  crud.rs  lib.rs  main.rs  models.rs  schema.rs
4_backend/4_1_db/src/crud/: user.rs
4_backend/4_2_http/: Cargo.toml  README.md  docker-compose.yml
4_backend/4_2_http/src/: cli.rs  lib.rs
4_backend/4_2_http/src/crud/: role.rs
4_backend/4_3_api/: .env  Cargo.toml  README.md
4_backend/4_3_api/src/: cli.rs  crud.rs  endpoints.rs  lib.rs  models.rs
4_backend/4_3_api/src/crud/: role.rs  user.rs
4_backend/4_3_api/src/endpoints/: role.rs  user.rs
4_backend/migrations/2023-11-28-041843_users/: down.sql  up.sql
4_backend/src/: graphql.rs  lib.rs  main.rs  schema.rs  token_storage.rs
4_backend/src/graphql/: context.rs  models.rs  mutation.rs  query.rs
(+8 files in other folders)
