[package]
name = "step_3_6"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
duration-string = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
toml = "0.8.8"
url = { version = "2.5", features = ["serde"] }
