[package]
name = "step_4_1"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
diesel = { version = "2.1.4", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
slug = "0.1.5"
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["full"] }
