[package]
name = "step_4_3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.4.0"
bb8-postgres = "0.8.1"
diesel = { version = "2.1.4", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
slug = "0.1.5"
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
